Fix register button alignment and color themes

--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -16,7 +16,7 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #42C0FB;
+    border-color: #6D9BF1;
     border-width: 3px;
 }
 
@@ -25,7 +25,7 @@ hr.light {
 }
 
 a {
-    color: #42C0FB;
+    color: #6D9BF1;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -33,7 +33,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #eb3812;
+    color: #3579DC;
 }
 
 #about a {
@@ -61,7 +61,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #42C0FB;
+    background-color: #6D9BF1;
 }
 
 .bg-dark {
@@ -98,7 +98,7 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #42C0FB;
+    color: #6D9BF1;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
@@ -116,12 +116,12 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #42C0FB;
+    color: #6D9BF1;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #42C0FB!important;
+    color: #6D9BF1!important;
     background-color: transparent;
 }
 
@@ -162,7 +162,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #42C0FB;
+        color: #6D9BF1;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -177,7 +177,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #42C0FB;
+        color: #6D9BF1;
     }
 }
 
@@ -332,7 +332,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #42C0FB;
+    color: #6D9BF1;
 }
 
 .no-gutter > [class*=col-] {
@@ -394,9 +394,10 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #42C0FB;
+    margin-bottom: 250px;
+    border-color: #6D9BF1;
     color: #fff;
-    background-color: #42C0FB;
+    background-color: #6D9BF1;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -410,7 +411,7 @@ fieldset[disabled] .btn-default.active {
 .open > .dropdown-toggle.btn-primary {
     border-color: #ed431f;
     color: #fff;
-    background-color: #ee4b28;
+    background-color: #3579DC;
 }
 
 .btn-primary:active,
@@ -437,12 +438,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #42C0FB;
-    background-color: #42C0FB;
+    border-color: #6D9BF1;
+    background-color: #6D9BF1;
 }
 
 .btn-primary .badge {
-    color: #42C0FB;
+    color: #6D9BF1;
     background-color: #fff;
 }
 
@@ -452,6 +453,7 @@ fieldset[disabled] .btn-primary.active {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
+    font-size: 20px;
 }
 
 .btn-xl {
